--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "node": "18.x"
   },
   "scripts": {
-    "dev": "node index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemailer": "^6.9.5"
