--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,13 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.js"
+      "dest": "/index.js",
+      "methods": ["POST", "PUT"],
+      "headers": {
+        "Content-Length": {
+          "max": "50mb"
+        }
+      }
     }
   ]
 }
